# stocks

./: .gitignore  Kelly.py  Magic.py  README.md  Vcp.py  main.py  openaiTest.py  pyproject.toml  requirements.txt  ruff.toml  vcp.py  walter_schloss.py
.github/workflows/: pylint.yml
src/: fund_downloader.py  kelly.py  magic_formula.py  vcp.py  walter_schloss.py
tests/: __init__.py  test_kelly.py  test_magic_formula.py  test_walter_schloss.py
